# processing-chain-guidelines

./: README.md  mkdocs.yml  pyproject.toml
docs/: Data_processing_chain_template.md  best_practices.md  index.md  requirements.txt  tools_and_libraries.md
docs/files/: sentinel-2-l1c-item.json
